--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color: #fffbea;">
 
     <h1>
-        <img src="logo.png" alt="Prayoga Logo" width="50" height="50"
+        <img src="Logo Final Horizontal with BG.png" alt="Prayoga Logo" width="50" height="50"
              style="vertical-align: middle;">
         Welcome to Prayoga
     </h1>
