--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>
         <img src="Logo Final Horizontal with BG.png" alt="Prayoga Logo" width="50" height="50"
              style="vertical-align: middle;">
-        Welcome to Prayoga
+        Welcome to Prayog
     </h1>
 
     <ol>
