--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <ol>
         <li><h2>Learning Math with Dhatu</h2></li>
-        <li><h2>Discussion with Prof. Jeffrey Ullman</h2></li>
+        <li><h2>Discussion with Prof. Jeffery Ullman</h2></li>
     </ol>
 <a href="https://www.prayoga.org.in/" target="_blank">link 1 </a><br>
-<a href="https://www.newgradiance.com/services/servlet/COTC" target="_blank">link 2 </a>
+<a href="https://www.newgradiance.com/services/servlet/COTC" target="_blank">Gradiance platform </a>
 
 
 
